completed webpage of my main mode of transportation

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -3,10 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>Week 4 Assignment</title>
-    <!-- Create and link a CSS file! -->
+    <h1>Week 4 Assignment - Part 2</h1>
+    <link rel="stylesheet" href="/Users/xibz/Prime/tier1/week4/prime-pw-week-4-assignment-part-2/assignment/style.css">
   </head>
   <body>
-    <h1>Week 4 Assignment - Part 2</h1>
-    <p>Check console for errors.</p>
+    <div class="info">
+      <h2>My name is Kongxib Vue and I go by Xibz (Zeebs)</h2>
+    </div>
+    <p id="my subbie"><img src="https://images.unsplash.com/photo-1617197972996-7b208ab7561b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Subbie in the lot" class="center">
+</p>
+<h3>There are a few reasons why I choose my main mode of transportation:
+<ul>
+  <li>Easier access to stores and neighboring cities.</li>
+  <li>I find my peace driving around in my car, even with MN traffic :)</li>
+  <li>Twin Cities Greater Metro Area doesn't have the most convenient public transportation.</li>
+</ul>
+</h3>
   </body>
 </html>
