fixed up mistakes

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Week 4 Assignment</title>
-    <h1>Week 4 Assignment - Part 2</h1>
-    <link rel="stylesheet" href="/Users/xibz/Prime/tier1/week4/prime-pw-week-4-assignment-part-2/assignment/style.css">
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <div class="info">
+      <header>
+        <h1>Week 4 Assignment - Part 2</h1>
+      </header>
       <h2>My name is Kongxib Vue and I go by Xibz (Zeebs)</h2>
     </div>
     <p id="my subbie"><img src="https://images.unsplash.com/photo-1617197972996-7b208ab7561b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Subbie in the lot" class="center">
